--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-header { 
-    color: purple;
-  }
+body {
+  background-color: #f4f4f4;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 20px
+}
