--- a/style.css
+++ b/style.css
@@ -8,3 +8,15 @@ body {
   height: 100vh;
   padding: 20px
 }
+header {
+  background-color: #3c0497;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  width: 100%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+header h1 {
+  font-size: 24px;
+}
