--- a/style.css
+++ b/style.css
@@ -79,6 +79,23 @@ header {
   border: 1px solid #ddd;
   margin-bottom: 10px;
 }
+/* Task List */
+#task-list, #inprogress-task-list, #removed-task-list {
+  list-style-type: none;
+  margin-top: 15px;
+  padding: 0;
+}
+
+#task-list li, #inprogress-task-list li {
+  background: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #ddd;
+  margin-bottom: 10px;
+}
 
 /* Completed Tasks */
 .completed {
