--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   background-color: #000000;
-  display: flex;
+  display: grid;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -118,9 +118,24 @@ header {
   background-color: #e0a800;
 }
 
+/* inprogress button */
+.inprogress-btn {
+  background-color: #045cea;
+  color: black;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-left: 5px;
+}
+
+.inprogress-btn:hover {
+  background-color: #00076b;
+}
+
 .delete-btn {
   background-color: red;
-  color: white;
+  color: rgb(0, 0, 0);
   border: none;
   padding: 5px 10px;
   cursor: pointer;
